c/src/test/resources/syntax/bad/badcpp.c
#foo; // non-existant pre-processor directive
